# MCPs

./: README.md
mcp-langchain/: calculator.py  canada-weather.ipynb  playground.ipynb  pyproject.toml  weather.py
weather-mcp-client/: README.md  client.py
weather-mcp-client/logger/: config.py
weather-mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
weather-tutorial/: README.md
weather-tutorial/weather-mcp-client/: .gitignore  README.md  client.py  pyproject.toml
weather-tutorial/weather-mcp-server/: .gitignore  Dockerfile  server.py
weather-tutorial/weather-mcp-server/logger/: __init__.py
